src/objects/Financials_Change_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financials Change Requests</relationshipLabel>
        <relationshipName>Financials_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Saved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Saved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Financials_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Financials Change Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Financials_Change_Reviewers_Financials_Change_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Financials Change Reviewers</label>
        <queue>Financials_Change_Reviewers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>FCR - {00000}</displayFormat>
        <label>Financials Change Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financials Change Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>